--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>
-      DocPlanner Group</title>
-      <link rel="Icon" href="./logo-title.png">
+    <title>DocPlanner Group</title>
+    <link rel="Icon" href="./logo-title.png" />
 
     <link rel="stylesheet" href="./style.css" />
     <style>
@@ -16,25 +15,25 @@
   </head>
   <body>
     <!--Navigation Bar-->
-   
-      <nav>
-        <div class="navdiv">
-          <div>
-            <img
-              src="./logo-default-group-en.svg"
-              alt="logo"
-              width="200px"
-              height="50px"
-            />
-          </div>
-          <div class="navtext">
-            <a href="">About us</a>
-            <a href="">Career</a>
-            <a href="">Departments</a>
-          </div>
+
+    <nav>
+      <div class="navdiv">
+        <div>
+          <img
+            src="./logo-default-group-en.svg"
+            alt="logo"
+            width="200px"
+            height="50px"
+          />
         </div>
-      </nav>
-      <div class="partsize">
+        <div class="navtext">
+          <a href="">About us</a>
+          <a href="">Career</a>
+          <a href="">Departments</a>
+        </div>
+      </div>
+    </nav>
+    <div class="partsize">
       <!--Navigation Bar-->
       <!--section 1-->
       <div class="section1">
@@ -59,43 +58,49 @@
       <!--section 2-->
       <div class="section2">
         <div class="card patients">
-          <img src="./icon-patients.svg" alt="" />
-          <h1>For patients</h1>
-          <h2>
-            Find a doctor, book a visit and solve any health-related doubt
-          </h2>
-          <select class="Country">
-            <option value="choose">choose country</option>
-            <option value="Brasil">Brasil</option>
-            <option value="Portugal">Portugal</option>
-            <option value="Spain">Spain</option>
-          </select>
+          <div class="patientsmove">
+            <img src="./icon-patients.svg" alt="" />
+            <h1>For patients</h1>
+            <h2>
+              Find a doctor, book a visit and solve any health-related doubt
+            </h2>
+            <select class="Country">
+              <option value="choose">choose country</option>
+              <option value="Brasil">Brasil</option>
+              <option value="Portugal">Portugal</option>
+              <option value="Spain">Spain</option>
+            </select>
+          </div>
         </div>
         <div class="card doctors">
-          <img src="./icon-doctors.svg" alt="" />
-          <h1>For doctors</h1>
-          <h2>Save time managing visits and cut no-shows by half</h2>
-          <select class="Country">
-            <option value="choose">choose country</option>
-            <option value="Brasil">Brasil</option>
-            <option value="Portugal">Portugal</option>
-            <option value="Spain">Spain</option>
-          </select>
+          <div class="doctorsmove">
+            <img src="./icon-doctors.svg" alt="" />
+            <h1>For doctors</h1>
+            <h2>Save time managing visits and cut no-shows by half</h2>
+            <select class="Country">
+              <option value="choose">choose country</option>
+              <option value="Brasil">Brasil</option>
+              <option value="Portugal">Portugal</option>
+              <option value="Spain">Spain</option>
+            </select>
+          </div>
         </div>
         <div class="card clinics">
-          <img src="./icon-clinics.svg" alt="" />
-          <h1>For clinics</h1>
-          <h2>Deliver an exceptional patient experience in your clinic</h2>
-          <select class="Country">
-            <option value="choose">2 to 20 specialists</option>
-            <option value="Portugal">Portugal</option>
-            <option value="Spain">Spain</option>
-          </select>
-          <select class="Country">
-            <option value="choose">More than 20 specialists</option>
-            <option value="Portugal">Portugal</option>
-            <option value="Spain">Spain</option>
-          </select>
+          <div class="clinicsmove">
+            <img src="./icon-clinics.svg" alt="" />
+            <h1>For clinics</h1>
+            <h2>Deliver an exceptional patient experience in your clinic</h2>
+            <select class="Country">
+              <option value="choose">2 to 20 specialists</option>
+              <option value="Portugal">Portugal</option>
+              <option value="Spain">Spain</option>
+            </select>
+            <select class="Country">
+              <option value="choose">More than 20 specialists</option>
+              <option value="Portugal">Portugal</option>
+              <option value="Spain">Spain</option>
+            </select>
+          </div>
         </div>
       </div>
       <!--section 3-->
@@ -210,28 +215,36 @@
           </p>
         </div>
         <div class="fullcdr">
-          <div class="fullcadr small">
-            <img src="./flag.png" alt="" />
-            <h3>Leader in 13 countries</h3>
-            <p>
-              Poland, Brazil, Mexico, Spain, Italy, Germany, Turkey, Colombia,
-              Czech Republic, Portugal, Argentina, Peru and Chile
-            </p>
+          <div class="countrymove">
+            <div class="fullcadr small">
+              <img src="./flag.png" alt="" />
+              <h3>Leader in 13 countries</h3>
+              <p>
+                Poland, Brazil, Mexico, Spain, Italy, Germany, Turkey, Colombia,
+                Czech Republic, Portugal, Argentina, Peru and Chile
+              </p>
+            </div>
           </div>
-          <div class="fullcadr">
-            <img src="./visits.png" alt="" />
-            <h3>13,000,000 appointments</h3>
-            <p>booked last month</p>
+          <div class="visitsmove">
+            <div class="fullcadr">
+              <img src="./visits.png" alt="" />
+              <h3>13,000,000 appointments</h3>
+              <p>booked last month</p>
+            </div>
           </div>
-          <div class="fullcadr small">
-            <img src="./patients1.png" alt="" />
-            <h3>85,000,000 patients</h3>
-            <p>visit our websites each month</p>
+          <div class="patientsmove">
+            <div class="fullcadr small">
+              <img src="./patients1.png" alt="" />
+              <h3>85,000,000 patients</h3>
+              <p>visit our websites each month</p>
+            </div>
           </div>
-          <div class="fullcadr">
-            <img src="./doctors1.png" alt="" />
-            <h3>190,000 active doctors</h3>
-            <p>trust our solutions</p>
+          <div class="doctorsmove">
+            <div class="fullcadr">
+              <img src="./doctors1.png" alt="" />
+              <h3>190,000 active doctors</h3>
+              <p>trust our solutions</p>
+            </div>
           </div>
         </div>
       </div>
